[tool.poetry]
name = "lu"
version = "0.1.0"
description = ""
authors = ["Lolio  <elie.pernet@orange.fr>"]
readme = "README.md"

[tool.poetry.scripts]
lu = "lu.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
